--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
-  "name": "my-app",
+  "name": "ncc-training-reactjs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.0.1",
-    "@testing-library/user-event": "^14.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "@reduxjs/toolkit": "^1.7.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "axios": "^0.25.0",
+    "moment": "^2.29.1",
+    "react": "^17.0.2",
+    "react-datetime": "^3.1.1",
+    "react-datetime-picker": "^3.4.3",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-reveal": "^1.2.2",
+    "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
+    "redux": "^4.1.2",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1",
+    "webpack": "4.44.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-datetime-picker": "^3.4.1",
+    "@types/react-toastify": "^4.1.0"
   }
 }
